# xls2latex

./: .envrc  .gitignore  README.md  default.nix  devenv.nix  devenv.yaml  flake.nix  main.py  pyproject.toml  pyproject.toml_  pyrightconfig.json  xls2tex.py
src/xls2latex/: cli.py  main.py  xlWB.py  xlcellfun.py
tests/: .~lock.merged.xlsx#  merged.md  merged.tex  merged.working.tex  merged.xlsx  pandoc_template_min.latex  prices.tex  prices.xlsx  procdoc.sh  runmain.sh  runmerged.sh  runtestdoc.sh  testdoc.md  tstnumfmt.py  tstnumfmt.xlsx
xls2latex/: main.py  xlTableTeX.py
xls2tex/: __init__.py  e2lvp.py  xlTableTeX.py  xlWB.py  xlcellfun.py
