[tool.poetry]
name = "xls2tex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
xls2latex = "xls2latex.main:main"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
