[tool.poetry]
name = "xls2latex"
version = "0.4.0"
description = ""
authors = ["ppenguin <hieronymusv@gmail.com>"]
license = "	AGPL-3.0-or-later"
# packages = [
#     # { include = "xls2latex" },
#     { include = "lib" },
# ]

[tool.poetry.scripts]
xls2latex = "xls2latex.main:main"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
